tests/baselines/reference/jsdocTemplateConstructorFunction.errors.txt
templateTagOnConstructorFunctions.js(24,1): error TS2322: Type 'boolean' is not assignable to type 'number'.


==== templateTagOnConstructorFunctions.js (1 errors) ====
    /**
     * @template U
     * @typedef {(u: U) => U} Id
     */
    /**
     * @param {T} t
     * @template T
     */
    function Zet(t) {
        /** @type {T} */
        this.u
        this.t = t
    }
    /**
     * @param {T} v
     * @param {Id<T>} id
     */
    Zet.prototype.add = function(v, id) {
        this.u = v || this.t
        return id(this.u)
    }
    var z = new Zet(1)
    z.t = 2
    z.u = false
    ~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
    